php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39797 SSI include problem
Submitted: 2006-12-11 10:39 UTC Modified: 2006-12-13 13:43 UTC
From: jiri dot reischig at ecn dot cz Assigned:
Status: Closed Package: Apache2 related
PHP Version: 5.2.0 OS: Linux
Private report: No CVE-ID: None
 [2006-12-11 10:39 UTC] jiri dot reischig at ecn dot cz
Description:
------------
PHP code is not interpreted when it's included by SSI "include virtual" after another SSI "include virtual" some no php file from directory which has set php engine off.

On php 5.1.6 it's working OK.

If I try "include virtual" first php file and after htm file from directory with disabled php it's look like OK.

Reproduce code:
---------------
bad SSI file: blb2.shtml:
<!--#include virtual="temp/blb.htm"-->
<!--#include virtual="blb.php"-->

httpd.conf:
<Directory /www/temp>
    php_admin_flag engine Off
</Directory>



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-11 10:40 UTC] tony2001@php.net
Sorry, but your problem does not imply a bug in PHP itself.  For a
list of more appropriate places to ask for help using PHP, please
visit http://www.php.net/support.php as this bug system is not the
appropriate forum for asking support questions.  Due to the volume
of reports we can not explain in detail here why your report is not
a bug.  The support channels will be able to provide an explanation
for you.

Thank you for your interest in PHP.


 [2006-12-12 08:45 UTC] jiri dot reischig at ecn dot cz
I'm sorry, but it's look like PHP bug.
I just upgrade from 5.1.6 to 5.2.0.
On old PHP version it's working OK and on new version it's not working.
PHP is used as mod_php on apache 2.2.3. Apache is not changed between PHP upgrade.

I test it on two different servers with apache 2.2.3 and 2.0.59.
So it's look like that there is some bad changes on new PHP 5.2.0.
 [2006-12-12 18:05 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2006-12-13 13:43 UTC] jiri dot reischig at ecn dot cz
Latest snapshot looks like OK.

Thank you very much.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 10:00:02 2026 UTC