Fixed bug #39797 (virtual() does not reset changed INI settings).